<resources>
    <string name="app_name">ShortWeather</string>

    <!-- Title -->
    <string name="title_today_weather">오늘 날씨</string>
    <string name="title_week_weather">주간 날씨</string>
    <string name="title_clothes">옷</string>
    <string name="title_setting">설정</string>

    <!-- Appbar -->
    <string name="app_bar_add">add</string>
    <string name="app_bar_location">서울, 중구 명동</string>

    <!-- Drawer -->
    <string name="drawer_menu">메뉴</string>

    <!-- Button -->
    <string name="btn_txt_input_info_next">다음</string>
    <string name="btn_txt_input_time_check">확인</string>
    <string name="btn_txt_input_time_save">저장</string>

    <!-- InputInfo -->
    <string name="input_header_top">입력하신 정보를 바탕으로</string>
    <string name="input_header_bottom">생활에 맞는 날씨를 알려드릴게요</string>
    <string name="input_gender">성별을 선택해 주세요</string>
    <string name="input_age">연령대를 선택해 주세요</string>
    <string name="input_sensitivity">온도 민감도를 알려주세요</string>

    <!-- InputTime -->
    <string name="input_time_header">여러분의 하루를 알려주세요</string>
    <string name="input_time_wake_up">기상시간</string>
    <string name="input_time_out">외출시간</string>
    <string name="input_time_return">귀가시간</string>
    <string name="input_time_description">* 입력한 시간을 바탕으로 날씨를 알려드려요</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wait_server_error">잠시만 기다려주세요:)</string>
    <string name="http_server_error">인터넷에 연결해 주세요:(</string>

    <!--Setting-->
    <string name="setting_time">외출 / 귀가시간대 설정</string>
    <string name="setting_alarm">알림 설정</string>
    <string name="setting_wake_up">기상시간 설정</string>
    <string name="setting_out">외출시간 설정</string>
    <string name="setting_return">귀가시간 설정</string>
    <string name="setting_time_header">시간대를 변경해주세요</string>
    <string name="setting_wake_up_header">기상시간을 변경해주세요</string>
    <string name="setting_content_description">세팅화면 대체 텍스트</string>

    <!-- WeeklyWeather -->
    <string name="weekly_weather_header_day">일별예보</string>
    <string name="weekly_weather_header_time">오전 / 오후</string>
    <string name="weekly_weather_header_temperature">최고 / 최저</string>
    <string name="weekly_weather_content_description">주간날씨화면 대체 텍스트</string>

    <!-- CustomWeather -->
    <string name="custom_weather_going_out">외출 시간</string>
    <string name="custom_weather_going_home">귀가 시간</string>
    <string name="custom_weather_time_zone_weather">시간대별 날씨</string>
    <string name="custom_weather_weather">날씨</string>
    <string name="custom_weather_fine_dust">미세먼지</string>
    <string name="custom_weather_precipitation">강수</string>
    <string name="custom_weather_today_weather_info">오늘 날씨 정보</string>
    <string name="custom_weather_humidity">습도</string>
    <string name="custom_weather_day">일출/일몰</string>
    <string name="custom_weather_ultrafine_dust">초미세먼지</string>

    <!-- AlarmSetting -->
    <string name="alarm_setting_title">알림 설정</string>
    <string name="alarm_setting_subtitle">알림 받을 시간대를 \n설정해주세요</string>
    <string name="alarm_setting_all_title">전체 알림</string>
    <string name="alarm_setting_all_subtitle">날씨 정보를 알려드려요</string>
    <string name="alarm_setting_wake_title">기상시간대 알림</string>
    <string name="alarm_setting_wake_subtitle">기상시간에 맞춰서 날씨를 알려드려요</string>
    <string name="alarm_setting_sleep_title">취침시간대 알림</string>
    <string name="alarm_setting_sleep_subtitle">취침시간에 맞춰서 날씨를 알려드려요</string>
    <string name="alarm_setting_news_title">특보 알림</string>
    <string name="alarm_setting_news_subtitle">실시간 날씨 특보를 알려드려요</string>


    <!-- TodayWeather -->
    <string name="today_weather_fine_dust">미세</string>
    <string name="today_weather_ultrafine_dust">초미세</string>
</resources>