<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="vm"
            type="org.shortweather.presentation.input.viewmodel.InputTimeViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_setting_wake_time_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/setting_wake_up"
        android:textAppearance="@style/TextAppearance.ShortWeather.Subhead2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_setting_wake_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="78dp"
        android:text="@string/setting_wake_up_header"
        android:textAppearance="@style/TextAppearance.ShortWeather.Headline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_setting_wake_up_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:text="@string/input_time_wake_up"
        android:textAppearance="@style/TextAppearance.ShortWeather.Caption1"
        android:textColor="@color/short_weather_gray_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_setting_wake_time" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_setting_wake_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:selectable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_setting_wake_up_time">

        <TextView
            android:id="@+id/tv_setting_wake_time_contents"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@={vm.timeWake}"
            android:textAppearance="@style/TextAppearance.ShortWeather.Subhead1"
            tools:text="오전 8시 00분" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_setting_wake_time"
            android:layout_width="14dp"
            android:layout_height="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/ic_expand"
            app:layout_constraintBottom_toBottomOf="@+id/tv_setting_wake_time_contents"
            app:layout_constraintEnd_toEndOf="@+id/tv_setting_wake_time_contents"
            app:layout_constraintTop_toTopOf="@+id/tv_setting_wake_time_contents" />

        <View
            android:id="@+id/v_setting_wake_time_line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@color/short_weather_gray_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_setting_wake_time_contents" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_setting_wake_time_check"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/selector_input_btn_bg"
        android:enabled="true"
        android:text="@string/btn_txt_input_time_check"
        android:textAppearance="@style/TextAppearance.ShortWeather.Subhead2"
        android:textColor="@drawable/selector_input_btn_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>