<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srl_weekly_weather"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="28dp">

            <TextView
                android:id="@+id/tv_weekly_weather_header_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:text="@string/weekly_weather_header_day"
                android:textAppearance="@style/TextAppearance.ShortWeather.Caption1"
                android:textColor="@color/short_weather_gray_7"
                app:layout_constraintBottom_toBottomOf="@id/tv_weekly_weather_header_time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_weekly_weather_header_time" />

            <TextView
                android:id="@+id/tv_weekly_weather_header_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="14dp"
                android:gravity="center"
                android:text="@string/weekly_weather_header_time"
                android:textAppearance="@style/TextAppearance.ShortWeather.Caption1"
                android:textColor="@color/short_weather_gray_7"
                app:layout_constraintEnd_toStartOf="@+id/tv_weekly_weather_header_temperature"
                app:layout_constraintStart_toEndOf="@+id/tv_weekly_weather_header_day"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_weekly_weather_header_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="33dp"
                android:text="@string/weekly_weather_header_temperature"
                android:textAppearance="@style/TextAppearance.ShortWeather.Caption1"
                android:textColor="@color/short_weather_gray_7"
                app:layout_constraintBottom_toBottomOf="@id/tv_weekly_weather_header_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_weekly_weather_header_time" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_weekly_weather"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                android:scrollbarFadeDuration="0"
                android:scrollbars="none"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_weekly_weather_header_time"
                tools:listitem="@layout/item_weekly_weather" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>